2011-02-28  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Makefile: Call R and Rscript relative to R_HOME/bin

2011-02-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/fastLm.cpp (fastLm): Further simplified and shortened by using
	Rcpp::as<arma::mat>() on the input data

2011-02-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.13

	* inst/include/*: Updated to Armadillo 1.1.4 "Manta Lodge"

2011-02-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.12

	* inst/include/*: Updated to Armadillo 1.1.2 "Flood Kayak"

2011-01-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.11

	* inst/include/*: Updated to Armadillo 1.1.0 "Climate Vandal"

2010-12-12  Romain Francois <romain@r-enthusiasts.com>

	* R/SHLIB.R: new unexported R function SHLIB, small wrapper around R
	CMD SHLIB

2010-11-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.10

	* inst/include/*: Updated to Armadillo 1.0.0 "Antipodean Antileech”

2010-11-19  Dirk Eddelbuettel  <edd@debian.org>

	* R/fastLm.R: Also provide two R-squared measures in summary method

2010-11-19  Romain Francois <romain@r-enthusiasts.com>

	* DESCRIPTION: remove dependency on GNU make

	* R/RcppArmadillo.package.skeleton.R: updated skeleton generator so
	that the dependency on GNU make is removed

2010-11-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.9

	* inst/include/*: Updated to Armadillo 0.9.92 "Wall Street Gangster"

2010-10-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.8

	* inst/include/*: Updated to Armadillo 0.9.90 "Water Dragon"

	* NEWS: moved to inst/NEWS so that it gets installed with the package
	* inst/ChangeLog: moved to top-level enabling 'C-x 4 a' lookups

2010-09-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.7

2010-09-25  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/RcppArmadilloWrap.h: Updated for Armadillo 0.9.80
